<resources>
    <string name="app_name">SamaritanPokemonApp</string>
    <string name="about">About</string>
    <string name="types">Type(s):</string>
    <string name="weight">Weight:</string>
    <string name="height">Height:</string>
    <string name="base_stats">Base Stats</string>
    <string name="hp">HP:</string>
    <string name="attack">Attack:</string>
    <string name="defence">Defence:</string>
    <string name="special_attack">Special Attack:</string>
    <string name="special_defense">Special Defense:</string>
    <string name="speed">Speed:</string>
    <string name="capture_information">Capture Information</string>
    <string name="capture">Capture</string>
    <string name="nickname">Nickname:</string>
    <string name="captured_on">Captured on:</string>
    <string name="captured_level">Captured Level:</string>
    <string name="toast_error_message">Fill in both Captured Date and Captured Level</string>
    <string name="capturing">Capturing</string>
    <string name="nickname_hint">Nickname</string>
    <string name="captured_level_hint">Captured Level</string>
    <string name="captured_date_hint">Captured Date</string>
    <string name="captured_pokemon">Captured Pokemon</string>
    <string name="name">Name</string>


</resources>