<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PokemonDetailsFragment">

    <ImageView
        android:id="@+id/imageViewPokemonDetailsPic"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:src="@drawable/ic_launcher_foreground"/>


    <TextView
        android:id="@+id/textViewPokemonDetailsNumberAndName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/white"
        android:layout_margin="8dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewAbout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textSize="16dp"
                android:padding="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textViewPokemonDetailsTypes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:padding="2dp"
                android:layout_marginLeft="10dp"
                android:text="@string/types"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewPokemonDetailsWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:padding="2dp"
                android:text="@string/weight"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewPokemonDetailsHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:padding="2dp"
                android:text="@string/height"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="15dp"
                android:textSize="14sp" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/white"
        android:layout_margin="8dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewBaseStats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/base_stats"
                android:textSize="16dp"
                android:padding="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textViewPokemonDetailsHP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:padding="2dp"
                android:layout_marginLeft="10dp"
                android:text="@string/hp"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewPokemonDetailsAttack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:padding="2dp"
                android:text="@string/attack"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewPokemonDetailsDefence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:padding="2dp"
                android:text="@string/defence"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewPokemonDetailsSpecialAttack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:padding="2dp"
                android:text="@string/special_attack"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewPokemonDetailsSpecialDefense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:padding="2dp"
                android:text="@string/special_defense"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewPokemonDetailsSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:padding="2dp"
                android:text="@string/speed"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="15dp"
                android:textSize="14sp" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewCaptureInformation"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/white"
        android:layout_margin="8dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewCaptureInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capture_information"
                android:textSize="16dp"
                android:padding="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textViewNickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:padding="2dp"
                android:layout_marginLeft="10dp"
                android:text="@string/nickname"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewCapturedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:padding="2dp"
                android:text="@string/captured_on"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewCapturedLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:padding="2dp"
                android:text="@string/captured_level"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="15dp"
                android:textSize="14sp" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonCapturePokemon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_rounded_button"
        android:text="@string/capture"
        android:textColor="@color/white"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

</LinearLayout>